[project]
name = "pybus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "莊欽淯", email = "61406288+chinyue1910@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "dependency-injector>=4.49.0",
    "google-genai>=1.71.0",
    "inflection>=0.5.1",
    "kafka-python>=2.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "redis>=7.4.0",
    "minio>=7.2.20",
]

[project.optional-dependencies]
sqlalchemy = ["pgvector>=0.4.2", "sqlalchemy>=2.0.49"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "coverage>=7.13.5",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["__pypackages__", ".venv"]
extraPaths = ["src/pybus"]
